# neutron-dynamic-routing

./: README.md  setup.cfg
devstack/: README.md  plugin.sh  settings
devstack/lib/: bgp
neutron-dynamic-routing/neutronclient/neutron/v2_0/bgp/: dragentscheduler.py  peer.py  speaker.py
neutron_dynamic_routing/api/rpc/agentnotifiers/: bgp_dr_rpc_agent_api.py
neutron_dynamic_routing/api/rpc/handlers/: bgp_speaker_rpc.py
neutron_dynamic_routing/db/: bgp_db.py  bgp_dragentscheduler_db.py
neutron_dynamic_routing/extensions/: bgp.py  bgp_dragentscheduler.py
neutron_dynamic_routing/neutron/db/: bgp_db.py  bgp_dragentscheduler_db.py
neutron_dynamic_routing/neutron/extensions/: bgp.py  bgp_dragentscheduler.py
neutron_dynamic_routing/neutron/services/bgp/: bgp_plugin.py
neutron_dynamic_routing/neutron/tests/api/: test_bgp_speaker_extensions_negative.py
neutron_dynamic_routing/neutron/tests/common/: helpers.py
neutron_dynamic_routing/services/bgp/: bgp_plugin.py
neutron_dynamic_routing/services/bgp/agent/: bgp_dragent.py  entry.py
neutron_dynamic_routing/services/bgp/common/: opts.py
neutron_dynamic_routing/services/bgp/driver/: utils.py
neutron_dynamic_routing/services/bgp/scheduler/: bgp_dragent_scheduler.py
neutron_dynamic_routing/tests/api/: test_bgp_speaker_extensions_negative.py
neutron_dynamic_routing/tests/common/: helpers.py
neutron_dynamic_routing/tests/unit/db/: test_bgp_db.py  test_bgp_dragentscheduler_db.py
neutron_dynamic_routing/tests/unit/extensions/: test_bgp_dragentscheduler.py
(+33 files in other folders)
