[metadata]
name = neutron-dynamic-routing 
summary = neutron dynamic routing
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    neutron_dynamic_routing

[entry_points]
console_scripts =
    neutron-bgp-dragent = neutron-dynamic-routing.neutron.cmd.eventlet.agents.bgp_dragent:main
neutron.service_plugins =
    bgp = neutron-dynamic-routing.neutron.services.bgp.bgp_plugin:BgpPlugin
oslo.config.opts =
    neutron.bgp.agent = neutron-dynamic-routing.neutron.services.bgp.common.opts:list_bgp_agent_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron/locale/neutron.pot

[compile_catalog]
directory = neutron/locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = neutron/locale
input_file = neutron/locale/neutron.pot

[wheel]
universal = 1

[pbr]
warnerrors = true
